<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.en-circle.el</groupId>
  <artifactId>espresso-lisp-core</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>

  <name>espresso-lisp-core</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
    <jar.dir>${project.build.directory}/jars</jar.dir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-api</artifactId>
      <version>22.3.0</version>
    </dependency>

    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-dsl-processor</artifactId>
      <version>22.3.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-tck</artifactId>
      <version>22.3.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.8</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>espresso-lisp-core</finalName>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.10</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.graalvm.truffle</groupId>
                  <artifactId>truffle-api</artifactId>
                  <version>22.3.0</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <destFileName>truffle-api.jar</destFileName>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${jar.dir}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.10</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.graalvm.truffle</groupId>
                  <artifactId>truffle-api</artifactId>
                  <version>22.3.0</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <destFileName>truffle-api.jar</destFileName>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${jar.dir}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <release>${java.version}</release>
          <encoding>UTF-8</encoding>
          <annotationProcessorPaths>
            <annotationProcessorPath>
                <groupId>org.graalvm.truffle</groupId>
                <artifactId>truffle-dsl-processor</artifactId>
                <version>22.3.0</version>
            </annotationProcessorPath>
          </annotationProcessorPaths>
          <annotationProcessors>
            <annotationProcessor>com.oracle.truffle.dsl.processor.TruffleProcessor</annotationProcessor>
          </annotationProcessors>
            <compilerArgs>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.instrumentation=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.object=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.library=ALL-UNNAMED</arg>
              <arg>--add-exports</arg>
              <arg>org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED</arg>
            </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>espresso-lisp-core</finalName>
              <artifactSet>
                <excludes>
                  <exclude>junit:junit</exclude>
                  <exclude>org.graalvm.truffle:truffle-api</exclude>
                  <exclude>org.graalvm.truffle:truffle-dsl-processor</exclude>
                  <exclude>org.graalvm.truffle:truffle-tck</exclude>
                  <exclude>org.graalvm:graal-sdk</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
